# Clock

./: .clang-format  CMakeLists.txt  Dockerfile  Jenkinsfile
app/: CMakeLists.txt  main.cpp
app/ClockAppQuick/: CMakeLists.txt
app/ClockAppQuick/src/: main.cpp
app/ClockAppWidget/: CMakeLists.txt
app/ClockAppWidget/include/: ui_mainwindow.h
app/ClockAppWidget/src/: mainwindow.cpp  mainwindow.ui
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/ClockSettings/: CMakeLists.txt  hello.cpp
tests/: CMakeLists.txt
